# universal-context-pipeline

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  POSITIONING.md  README.md  ROADMAP.md  Universal Context Pipeline Specification.md
demo/: README.md  air-gap-rag.tape  conversation-memory.tape  quick-start.tape
samples/: README.md
samples/code/: rate_limiter.rs
samples/conversations/: claude-conversations.json
samples/notes/: postgres-vacuum-tuning.md  q3-planning-meeting.md  rust-error-handling.md
src/: config.rs  embeddings.rs  indexer.rs  lib.rs  main.rs  mcp.rs  storage.rs  watcher.rs
src/ingestion/: code.rs  conversation_export.rs  markdown.rs  masking.rs  mod.rs  prose.rs
