[package]
name = "ucp-local"
version = "0.1.0"
edition = "2024"
description = "Universal Context Pipeline — local-first MCP server for grounding LLMs in your files"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "ucp-local"
path = "src/main.rs"

[lib]
name = "ucp_local"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Week 1
regex = "1"
sha2 = "0.10"
tiktoken-rs = "0.5"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"

# Week 2
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1"
bytemuck = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
walkdir = "2"
pdf-extract = "0.7"
indicatif = "0.17"

# Week 3
notify = "6"

[dev-dependencies]
tempfile = "3"